--- a/Rmd.Rmd
+++ b/Rmd.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 1"
-author: "Ella Park"
+author: "Ella Park, Rosie Crookes"
 date: "`r Sys.Date()`"
 output: html_document
 ---
