Added TO Column

--- a/Rmd.Rmd
+++ b/Rmd.Rmd
@@ -24,13 +24,29 @@ data <- read_csv("20161213_uk_wind_solar_demand_temperature_SCS2.csv")
 
 data <- data %>%
   mutate(
-    # First, convert the character string to a datetime object
     Local_DateTime = dmy_hm(`Local Time`),
-    # Then, use lubridate functions to extract components
     Month = month(Local_DateTime),
-    WeekdayNum = wday(Local_DateTime) - 1, # wday is 1-based (1=Sun), so subtract 1 for 0-based
-    Year = year(Local_DateTime)
+    WeekdayNum = wday(Local_DateTime) - 1,
+    Year = year(Local_DateTime),
+    Date = as.Date(Local_DateTime),
+    Hour = hour(Local_DateTime)  # Extract hour
   )
+
+
+# Average Temperature between 3 and 6pm
+TO_data <- data %>%
+  filter(Hour >= 15 & Hour <= 18) %>%
+  group_by(Date) %>%
+  summarise(TO = mean(temp_merra1, na.rm = TRUE))%>%
+  ungroup()
+
+data <- data %>%
+  select(-Hour)
+
+
+data <- data %>%
+  left_join(TO_data, by = "Date")
+
 
 # Define the months you want to keep
 desired_months <- c(11, 12, 1, 2, 3)
@@ -47,6 +63,8 @@ filtered_data <- filtered_data %>%
     across(where(is.numeric), mean, na.rm = TRUE)
   ) %>%
   ungroup()
+
+
 
 
 ```
