--- a/Rmd.Rmd
+++ b/Rmd.Rmd
@@ -50,3 +50,39 @@ filtered_data <- filtered_data %>%
 
 
 ```
+```{r eda, echo = FALSE}
+# Wind vs demand
+wind_plot <- ggplot(demand, aes(x=wind, y=demand_gross)) +
+  geom_point(alpha=0.5, color=viridis(5)[4]) +
+  geom_smooth(method="lm", color="red") +
+  labs(title="Peak Demand vs Wind Capacity", x="Wind Capacity Factor", y="Peak Demand (MW)") +
+  theme_bw()
+
+# Solar vs demand
+solar_plot <- ggplot(demand, aes(x=solar_S, y=demand_gross)) +
+  geom_point(alpha=0.5, color=viridis(5)[5]) +
+  geom_smooth(method="lm", color="red") +
+  labs(title="Peak Demand vs Solar Capacity", x="Solar Capacity Factor", y="Peak Demand (MW)") +
+  theme_bw()
+
+# Temp vs demand- shows negative correlation
+temp_plot <- ggplot(demand, aes(x=temp, y=demand_gross)) +
+   geom_point(alpha=0.5, color=viridis(9)[8]) +
+   geom_smooth(method="lm", color="red") +
+   labs(title="Peak Demand vs Temperature", x="Temperature (°C)", y="Peak Demand (MW)") +
+   theme_bw()
+
+# TE vs demand- shows negative correlation
+te_plot <- ggplot(demand, aes(x=TE, y=demand_gross)) +
+   geom_point(alpha=0.5, color=viridis(9)[4]) +
+   geom_smooth(method="lm", color="red") +
+   labs(title="Peak Demand vs TE", x="Temperature (°C)", y="Peak Demand (MW)") +
+   theme_bw()
+
+# Start_Year vs demand- shows negative correlation
+year_plot <- ggplot(demand, aes(x=start_year, y=demand_gross)) +
+   geom_point(alpha=0.5, color=viridis(5)[1]) +
+   geom_smooth(method="lm", color="red") +
+   labs(title="Peak Demand vs Winter Start Year", x="Year", y="Peak Demand (MW)") +
+   theme_bw()
+```
