--- a/Rmd.Rmd
+++ b/Rmd.Rmd
@@ -7,7 +7,6 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-
 ```
 
 ## R Markdown
@@ -26,7 +25,7 @@ data <- data %>%
   mutate(
     Local_DateTime = dmy_hm(`Local Time`),
     Month = month(Local_DateTime),
-    WeekdayNum = wday(Local_DateTime) - 1,
+    WeekdayNum = wday(Local_DateTime),
     Year = year(Local_DateTime),
     Date = as.Date(Local_DateTime),
     Hour = hour(Local_DateTime)  # Extract hour
@@ -77,38 +76,77 @@ library(gridExtra)
 wind_plot <- ggplot(filtered_data, aes(x=wind_merra1, y=demand_gross)) +
   geom_point(alpha=0.5, color=viridis(5)[4]) +
   geom_smooth(method="lm", color="red") +
-  labs(title="Peak Demand vs Wind Capacity", x="Wind Capacity Factor", y="Peak Demand (MW)") +
+  labs(title="Average Demand vs Wind Capacity", x="Wind Capacity Factor", y="Month Demand (MW)") +
   theme_bw()
 
 # Solar vs demand
 solar_plot <- ggplot(filtered_data, aes(x=solar_sarah, y=demand_gross)) +
   geom_point(alpha=0.5, color=viridis(5)[5]) +
   geom_smooth(method="lm", color="red") +
-  labs(title="Peak Demand vs Solar Capacity", x="Solar Capacity Factor", y="Peak Demand (MW)") +
+  labs(title="Month Demand vs Solar Capacity", x="Solar Capacity Factor", y="Month Demand (MW)") +
   theme_bw()
 
 # Temp vs demand- shows negative correlation
 temp_plot <- ggplot(filtered_data, aes(x=temp_merra1, y=demand_gross)) +
    geom_point(alpha=0.5, color=viridis(9)[8]) +
    geom_smooth(method="lm", color="red") +
-   labs(title="Peak Demand vs Temperature", x="Temperature (°C)", y="Peak Demand (MW)") +
+   labs(title="Month Demand vs Temperature", x="Temperature (°C)", y="Month Demand (MW)") +
    theme_bw()
 
 # TE vs demand- shows negative correlation
 to_plot <- ggplot(filtered_data, aes(x=TO, y=demand_gross)) +
    geom_point(alpha=0.5, color=viridis(9)[4]) +
    geom_smooth(method="lm", color="red") +
-   labs(title="Peak Demand vs TE", x="Temperature (°C)", y="Peak Demand (MW)") +
+   labs(title="Month Demand vs TE", x="Temperature (°C)", y="Month Demand (MW)") +
    theme_bw()
 
 # Start_Year vs demand- shows negative correlation
 year_plot <- ggplot(filtered_data, aes(x=Year, y=demand_gross)) +
    geom_point(alpha=0.5, color=viridis(5)[1]) +
    geom_smooth(method="lm", color="red") +
-   labs(title="Peak Demand vs Winter Start Year", x="Year", y="Peak Demand (MW)") +
+   labs(title="Month Demand vs Winter Start Year", x="Year", y="Month Demand (MW)") +
    theme_bw()
 ```
 
-```{r demand_scatters_show, warning = FALSE, echo=FALSE, out.width="100%", cache = FALSE, caption = "Plotting peak demand against explanatory variables."}
+```{r demand_scatters_show, warning = FALSE, echo=FALSE, out.width="100%", cache = FALSE, caption = "Plotting Month demand against explanatory variables."}
 suppressWarnings(grid.arrange(wind_plot, solar_plot, temp_plot, to_plot, year_plot, ncol = 2))
+```
+
+```{r violin, echo=FALSE, warning=FALSE}
+library(gridExtra)
+# Month vs demand
+month_plot <- ggplot(filtered_data, aes(x=factor(Month, levels = c(11, 12, 1, 2, 3)), y=demand_gross, fill=factor(Month))) +
+  geom_violin(alpha=0.5) +  # Create the violin plot
+  geom_boxplot(width=0.2, color="black", alpha=0.7) +  # Add a boxplot inside the violin for quartiles
+  scale_fill_viridis_d(option="viridis") +    
+  scale_x_discrete(labels=c("November", "December", "Janurary", "February", "March")) +
+  labs(title="Month Demand Distribution by Month", x="Month", y="Month Demand (MW)") +
+  theme_bw() +
+  guides(fill=FALSE) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+# Day of week
+day_plot <- ggplot(filtered_data, aes(x=factor(WeekdayNum), y=demand_gross, fill=factor(WeekdayNum))) +
+  geom_violin(alpha=0.5) +  # Create the violin plot
+  geom_boxplot(width=0.2, color="black", alpha=0.7) +  # Add a boxplot inside the violin for quartiles
+  scale_fill_viridis_d(option="viridis") + 
+  scale_x_discrete(labels=c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday")) +
+  labs(title="Month Demand by Day of the Week", x="Day of Week", y="Month Demand (MW)") +
+  theme_bw() +
+  guides(fill=FALSE) + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+```{r violin_show, warning = FALSE, echo=FALSE, out.width="100%", cache = FALSE, caption = "Violin plots to analyse effect of month and day on Month demand."}
+grid.arrange(month_plot, day_plot, ncol = 2, nrow = 1)
+```
+
+```{r wday_eda_table, echo=FALSE, warning=FALSE}
+weekdays_stats <- data.frame(
+  Day = factor(0:6, labels = c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday")),
+  Median = tapply(filtered_data$demand_gross, filtered_data$WeekdayNum, median, na.rm = TRUE),
+  Q1 = tapply(filtered_data$demand_gross, filtered_data$WeekdayNum, function(x) quantile(x, 0.25, na.rm = TRUE)),
+  Q3 = tapply(filtered_data$demand_gross, filtered_data$WeekdayNum, function(x) quantile(x, 0.75, na.rm = TRUE))
+)
+print(weekdays_stats)
 ```
